--- a/default.html
+++ b/default.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html lang="ja"> 
-<meta charset="UTF-8">
-<title>Lekohub</title>
-<!-- cssとかjsもここで読み込み --> 
-<link rel="stylesheet" href="css/common.css">
-<script src="js/top.js"></script> 
-<div class="container"> {{ content }} </div>
+<html lang="ja"> 
+    <meta charset="UTF-8">
+    <title>hotman's page</title>
+    <link rel="stylesheet" href="css/common.css">
+    <script src="js/top.js"></script> 
+    <div class="container"> {{ content }} </div>
+</html>
