--- a/default.html
+++ b/default.html
@@ -1,7 +1,9 @@
-<html lang="ja"> 
-    <meta charset="UTF-8">
-    <title>hotman's page</title>
-    <link rel="stylesheet" href="css/common.css">
-    <script src="js/top.js"></script> 
-    <div class="container"> {{ content }} </div>
-</html>
+<!DOCTYPE html>
+<head>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+  <title>{{ page.title }}</title>
+</head>
+<body>
+  {{ content }}
+  <p>- rendered with layout template -</p>
+</body>
