--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>hotman's homepage</title>
+    <base href="{{site.github.url}}" charset="utf-8"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/styles/tomorrow-night-eighties.min.css">
     <link rel="stylesheet" href="{{site.github.url}}/style.css">
     <link rel="stylesheet" href="./style.css">
