--- a/index.html
+++ b/index.html
@@ -15,40 +15,40 @@
     <a href="javascript:void(0);" onclick="disp('./code/1-1.cpp',1);">解答1</a>
     <a href="javascript:void(0);" onclick="disp('./code/1-2.cpp',1);">解答2</a>
     <a href="javascript:void(0);" onclick="disp('./code/1-3.cpp',1);">解答3</a>
-    <a href="javascript:void(0);" onclick="_close(1);">閉じる</a><br/>
-    <pre><code id="code1" class="cpp">
+    <a href="javascript:void(0);" onclick="_close(1);">閉じる</a><br/><br/>
+    <pre id="pre1" hidden><code id="code1" class="cpp">
     </code></pre>
     <a href="http://judge.u-aizu.ac.jp/onlinejudge/description.jsp?id=ALDS1_5_A">bit全探索</a>
     <a href="javascript:void(0);" onclick="disp('./code/2-1.cpp',2);">解答1</a>
     <a href="javascript:void(0);" onclick="disp('./code/2-2.cpp',2);">解答2</a>
-    <a href="javascript:void(0);" onclick="_close(2);">閉じる</a><br/>
-    <pre><code id="code2" class="cpp">
+    <a href="javascript:void(0);" onclick="_close(2);">閉じる</a><br/><br/>
+    <pre id="pre2" hidden><code id="code2" class="cpp">
     </code></pre>
     <a href="http://judge.u-aizu.ac.jp/onlinejudge/description.jsp?id=1160">how many islands(BFS/DFS)</a>
     <a href="javascript:void(0);" onclick="disp('./code/3-1.cpp',3);">解答1</a>
     <a href="javascript:void(0);" onclick="disp('./code/3-2.cpp',3);">解答2</a>
     <a href="javascript:void(0);" onclick="disp('./code/3-3.cpp',3);">解答3</a>
-    <a href="javascript:void(0);" onclick="_close(3);">閉じる</a><br/>
-    <pre><code id="code3" class="cpp">
+    <a href="javascript:void(0);" onclick="_close(3);">閉じる</a><br/><br/>
+    <pre id="pre3" hidden><code id="code3" class="cpp">
     </code></pre>
     <a href="http://judge.u-aizu.ac.jp/onlinejudge/description.jsp?id=0529">darts(半分全列挙)</a>
     <a href="javascript:void(0);" onclick="disp('./code/4-1.cpp',4);">解答1</a>
-    <a href="javascript:void(0);" onclick="_close(4);">閉じる</a><br/>
-    <pre><code id="code4" class="cpp">
+    <a href="javascript:void(0);" onclick="_close(4);">閉じる</a><br/><br/>
+    <pre id="pre4" hidden><code id="code4" class="cpp">
     </code></pre>
     <a href="http://judge.u-aizu.ac.jp/onlinejudge/description.jsp?id=ALDS1_10_A">DP</a>
     <a href="javascript:void(0);" onclick="disp('./code/5-1.cpp',5);">解答1</a>
     <a href="javascript:void(0);" onclick="disp('./code/5-2.cpp',5);">解答2</a>
     <a href="javascript:void(0);" onclick="disp('./code/5-3.cpp',5);">解答3</a>
-    <a href="javascript:void(0);" onclick="_close(5);">閉じる</a><br/>
-    <pre><code id="code5" class="cpp">
+    <a href="javascript:void(0);" onclick="_close(5);">閉じる</a><br/><br/>
+    <pre id="pre5" hidden><code id="code5" class="cpp">
     </code></pre>
     <a href="http://judge.u-aizu.ac.jp/onlinejudge/description.jsp?id=DPL_1_B">ナップサックDP</a>
     <a href="javascript:void(0);" onclick="disp('./code/6-1.cpp',6);">解答1</a>
     <a href="javascript:void(0);" onclick="disp('./code/6-2.cpp',6);">解答2</a>
     <a href="javascript:void(0);" onclick="disp('./code/6-3.cpp',6);">解答3</a>
-    <a href="javascript:void(0);" onclick="_close(6);">閉じる</a><br/>
-    <pre><code id="code6" class="cpp">
+    <a href="javascript:void(0);" onclick="_close(6);">閉じる</a><br/><br/>
+    <pre id="pre6" hidden><code id="code6" class="cpp">
     </code></pre>
   </body>
 </html>
