--- a/index.html
+++ b/index.html
@@ -51,5 +51,15 @@
     <a href="javascript:void(0);" onclick="_close(6);">閉じる</a><br/><br/>
     <pre id="pre6" hidden><code id="code6" class="cpp">
     </code></pre>
+    <a href="https://atcoder.jp/contests/abc020/tasks/abc020_c">壁抜け(応用)</a>
+    <a href="javascript:void(0);" onclick="disp('./code/ch1-1.cpp',7);">解答1</a>
+    <a href="javascript:void(0);" onclick="_close(7);">閉じる</a><br/><br/>
+    <pre id="pre7" hidden><code id="code7" class="cpp">
+    </code></pre>
+    <a href="https://atcoder.jp/contests/arc028/tasks/arc028_4">注文の多い高橋商店(応用)</a>
+    <a href="javascript:void(0);" onclick="disp('./code/ch2-1.cpp',8);">解答1</a>
+    <a href="javascript:void(0);" onclick="_close(8);">閉じる</a><br/><br/>
+    <pre id="pre8" hidden><code id="code8" class="cpp">
+    </code></pre>
   </body>
 </html>
